--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 
 @import "markdown/_markdown.css";
+@import "markdown/_code_github.css";
+@import "markdown/_callout.css";
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -18,7 +20,7 @@
   }
 }
 
-body {
+/* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -26,7 +28,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
 
 @layer utilities {
   .text-balance {
