feat: CSS for basic for markdown
- added own obsidian plugin into markdown2 parser
- minor code cleanup

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "markdown/_markdown_zen.css";
 @import "markdown/_markdown.css";
+
 @import "markdown/_code_github.css";
+@import "markdown/_github_alert.css";
 @import "markdown/_callout.css";
 
 :root {
