--- a/styles/markdown/_markdown.css
+++ b/styles/markdown/_markdown.css
@@ -1,3 +1,6 @@
+/**
+* This is github style
+*/
 .markdown-body {
     --base-size-4: 0.25rem;
     --base-size-8: 0.5rem;
@@ -6,7 +9,7 @@
     --base-text-weight-medium: 500;
     --base-text-weight-semibold: 600;
     --fontStack-monospace: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
-  }
+}
   
   @media (prefers-color-scheme: dark) {
     .markdown-body,
