feat: added styling to base markdown for custom theme
- added padding on display

--- a/styles/markdown/_markdown_zen.css
+++ b/styles/markdown/_markdown_zen.css
@@ -25,7 +25,7 @@
         color-scheme: dark;
 
         --fgColor-accent: #0969da;
-        --fgColor-accent-focus: #1f6feb;
+        --fgColor-accent-focus: #113e83;
 
         --bgColor-default: #f3f3f3;
         --bgColor-alert: "";
@@ -41,6 +41,7 @@
         color-scheme: light;
 
         --fgColor-default: #34343c;
+        --fgColor-muted: #636c76;
         --fgColor-accent: #1f6feb;
         --fgColor-accent-focus: #0969da;
 
@@ -56,8 +57,13 @@
 
 /* Sizes on display changes */
 
+/* Base styles */ 
 
-/* Types */
+.markdown-body {
+    line-height: 1.75rem;
+}
+
+/* Typography */
 .markdown-body-zen h2, .markdown-body-zen h3, .markdown-body-zen h4, h5 {
     margin-top: 3rem;
     margin-bottom: 1.5rem;
@@ -114,9 +120,33 @@
     border: 0;
 }
 
+/* Quotes */
+.markdown-body-zen blockquote {
+    padding-left: 3rem;
+    margin-bottom: 1rem;
+    border-left: .25rem solid;
+    border-color: var(--borderColor-default);
+
+    color: var(--fgColor-muted)
+}
+
+.markdown-body-zen blockquote>:first-child {
+    margin-top: 0;
+}
+
+.markdown-body-zen blockquote>:last-child {
+    margin-bottom: 0;
+}
 
 
 /* Code block */
+.markdown-body-zen pre {
+    background-color: var(--bgColor-code);
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-radius: .675rem;
+}
+
 .markdown-body-zen pre code, .markdown-body pre tt {
     display: inline;
     max-width: auto;
@@ -170,4 +200,5 @@
 /* Hover states */
 .markdown-body-zen a:hover {
     color: var(--fgColor-accent-focus);
-  }
+    font-weight: 500;
+}
