feat: implemented code copy button with language support
- added dependency rehype-parse for parsing svg icons into the code header template

- added CSS for code header

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@
 @import "markdown/_code_github.css";
 @import "markdown/_github_alert.css";
 @import "markdown/_callout.css";
+@import "markdown/_code_headers.css";
 
 :root {
   --foreground-rgb: 0, 0, 0;
