feat: updated code and callout css
- light dark theme done right for codes
- moved css influence from markdown_zen on codes to code headers
- minor tweaks on callout coentent text colors

--- a/styles/markdown/_callout.css
+++ b/styles/markdown/_callout.css
@@ -24,7 +24,7 @@ blockquote[class^=callout-] {
     margin-left: -1rem;
     margin-right: -1rem;
 
-    padding: 1rem 1rem 1rem 3rem;
+    padding: 1rem 3rem 1rem 3rem;
     color: var(--prompt-text-color); 
 
     font-weight: 400;
@@ -50,6 +50,9 @@ blockquote[class^=callout-] {
     font-weight: 700;
 }
 
+.callout-content {
+    color: var(--prompt-text-color);
+}
 
 
 /* Color schemes for prompts */
