--- a/styles/markdown/_code_github.css
+++ b/styles/markdown/_code_github.css
@@ -7,10 +7,61 @@
 
   Outdated base version: https://github.com/primer/github-syntax-light
   Current colors taken from GitHub's CSS
+
+  EDIT Author: @zenovak. This is sourced from highlightjs's repository. 
+  https://github.com/highlightjs/highlight.js/blob/main/src/styles
+
+  Following edits are done for light-dark mode adaptations
 */
 
+@media (prefers-color-scheme: light) {
+  .hljs {
+    --color: #24292e;
+    --doctag: #d73a49;
+    --title: #6f42c1;
+    --attr: #005cc5;
+    --regexp: #032f62;
+    --builtin: #e36209;
+    --comment: #6a737d;
+    --name: #22863a;
+    --subst: #24292e;
+    --section: #005cc5;
+    --bullet: #735c0f;
+    --emphasis: #24292e;
+    --strong: #24292e;
+    --addition: #22863a;
+    --addition-bg: #f0fff4;
+    --deletion: #b31d28;
+    --deletion-bg: #ffeef0;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .hljs {
+    --color: #c9d1d9;
+    --doctag: #ff7b72;
+    --title: #d2a8ff;
+    --attr: #79c0ff;
+    --regexp: #a5d6ff;
+    --builtin: #ffa657;
+    --comment: #8b949e;
+    --name: #7ee787;;
+    --subst: #c9d1d9;
+    --section: #1f6feb;
+    --bullet: #f2cc60;
+    --emphasis: #c9d1d9;
+    --strong: #c9d1d9;
+    --addition: #aff5b4;
+    --addition-bg: #033a16;
+    --deletion: #ffdcd7;
+    --deletion-bg: #67060c;
+  }
+}
+
+
+
 .hljs {
-    color: #24292e;
+    color: var(--color);
     background: #ffffff;
   }
   
@@ -22,7 +73,7 @@
   .hljs-type,
   .hljs-variable.language_ {
     /* prettylights-syntax-keyword */
-    color: #d73a49;
+    color: var(--doctag);
   }
   
   .hljs-title,
@@ -30,7 +81,7 @@
   .hljs-title.class_.inherited__,
   .hljs-title.function_ {
     /* prettylights-syntax-entity */
-    color: #6f42c1;
+    color: var(--title);
   }
   
   .hljs-attr,
@@ -44,27 +95,27 @@
   .hljs-selector-class,
   .hljs-selector-id {
     /* prettylights-syntax-constant */
-    color: #005cc5;
+    color: var(--attr);
   }
   
   .hljs-regexp,
   .hljs-string,
   .hljs-meta .hljs-string {
     /* prettylights-syntax-string */
-    color: #032f62;
+    color: var(--regexp);
   }
   
   .hljs-built_in,
   .hljs-symbol {
     /* prettylights-syntax-variable */
-    color: #e36209;
+    color: var(--builtin);
   }
   
   .hljs-comment,
   .hljs-code,
   .hljs-formula {
     /* prettylights-syntax-comment */
-    color: #6a737d;
+    color: var(--comment);
   }
   
   .hljs-name,
@@ -72,47 +123,47 @@
   .hljs-selector-tag,
   .hljs-selector-pseudo {
     /* prettylights-syntax-entity-tag */
-    color: #22863a;
+    color: var(--name);
   }
   
   .hljs-subst {
     /* prettylights-syntax-storage-modifier-import */
-    color: #24292e;
+    color: var(--subst);
   }
   
   .hljs-section {
     /* prettylights-syntax-markup-heading */
-    color: #005cc5;
+    color: var(--section);
     font-weight: bold;
   }
   
   .hljs-bullet {
     /* prettylights-syntax-markup-list */
-    color: #735c0f;
+    color: var(--bullet);
   }
   
   .hljs-emphasis {
     /* prettylights-syntax-markup-italic */
-    color: #24292e;
+    color: var(--emphasis);
     font-style: italic;
   }
   
   .hljs-strong {
     /* prettylights-syntax-markup-bold */
-    color: #24292e;
+    color: var(--strong);
     font-weight: bold;
   }
   
   .hljs-addition {
     /* prettylights-syntax-markup-inserted */
-    color: #22863a;
-    background-color: #f0fff4;
+    color: var(--addition);
+    background-color: var(--addition-bg);
   }
   
   .hljs-deletion {
     /* prettylights-syntax-markup-deleted */
-    color: #b31d28;
-    background-color: #ffeef0;
+    color: var(--deletion);
+    background-color: var(--deletion-bg);
   }
   
   .hljs-char.escape_,
