--- a/styles/markdown/_markdown_zen.css
+++ b/styles/markdown/_markdown_zen.css
@@ -5,9 +5,6 @@
 
 
 .markdown-body-zen {
-
-    color: var(--fgColor-default);
-
     /* Constants */
     --base-size-4: 0.25rem;
     --base-size-8: 0.5rem;
@@ -24,14 +21,20 @@
     [data-theme="dark"] {
         color-scheme: dark;
 
-        --fgColor-accent: #0969da;
+        --heading-color: #cccccc;
+        --text-color: rgb(175, 176, 177);
+        --text-muted-color: #868686; 
+
+        --text-code-color: #c9def1;
+
+        --fgColor-accent: rgb(138, 180, 248);
         --fgColor-accent-focus: #113e83;
 
-        --bgColor-default: #f3f3f3;
-        --bgColor-alert: "";
-        --bgColor-code: #f6f6f7;
+        --bgColor-default: rgb(27, 27, 30);
+        --bgColor-code: #323238;
 
-        --borderColor-default: #30363db3;
+        --borderColor-default: #414955;
+        --borderColor-muted: #161b22;
     }
 }
 
@@ -40,18 +43,21 @@
     [data-theme="light"] {
         color-scheme: light;
 
+        --heading-color: #2a2a2a;
+        --text-color: #34343c;
+        --text-muted-color: #757575;
+
         --fgColor-default: #34343c;
         --fgColor-muted: #636c76;
         --fgColor-accent: #1f6feb;
         --fgColor-accent-focus: #0969da;
 
-        --bgColor-default: #f3f3f3;
-        --bgColor-alert: "";
+        --bgColor-default: white;
         --bgColor-code: #f6f6f7;
 
 
-        --borderColor-default: #f3f3f3;
-
+        --borderColor-default: #d0d7de;
+        --borderColor-muted: #d0d7deb3;
     }
 }
 
@@ -59,14 +65,19 @@
 
 /* Base styles */ 
 
-.markdown-body {
+.markdown-body-zen {
     line-height: 1.75rem;
+
+    color: var(--text-color);
+    background-color: var(--bgColor-default);
 }
 
 /* Typography */
-.markdown-body-zen h2, .markdown-body-zen h3, .markdown-body-zen h4, h5 {
+.markdown-body-zen h2, .markdown-body-zen h3, .markdown-body-zen h4, .markdown-body-zen h5 {
     margin-top: 3rem;
     margin-bottom: 1.5rem;
+
+    color: var(--heading-color);
 }
 
 .markdown-body-zen p {
@@ -103,6 +114,7 @@
 }
 
 .markdown-body-zen a {
+    background: transparent;
     color: var(--fgColor-accent);
     text-decoration: none;
 }
@@ -143,6 +155,9 @@
 .markdown-body-zen pre {
     padding: 1rem;
     margin-bottom: 1rem;
+
+    overflow-x: auto;
+    overflow-y: auto;
 }
 
 .markdown-body-zen pre code, .markdown-body pre tt {
@@ -169,8 +184,10 @@
 /* inline-code */
 .markdown-body-zen code {
     padding: .2rem .4rem;
-    background-color: var(--bgColor-code);
+    color: var(--text-code-color);
+    background: var(--bgColor-code);
     border-radius: 0.375rem;
+    white-space-collapse: break-spaces;
     font-size: 0.875rem;
 }
 
@@ -198,5 +215,5 @@
 /* Hover states */
 .markdown-body-zen a:hover {
     color: var(--fgColor-accent-focus);
-    font-weight: 500;
+    text-decoration: underline;
 }
