--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,9 @@
 @import "markdown/_callout.css";
 @import "markdown/_code_headers.css";
 
+/* TOC */
+@import "markdown/_tocbot.css";
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
