--- a/styles/markdown/_code_headers.css
+++ b/styles/markdown/_code_headers.css
@@ -1,10 +1,3 @@
-.code-block {
-    --button-border-radius: 10px;
-    --button-diameter: 36px;
-    --button-outline-width: 1px;
-}
-
-
 @media (prefers-color-scheme: light) {
     .code-block {
         --header-bg-color: #f6f6f7;
@@ -39,10 +32,34 @@
     }
 }
 
+/* PC view */
+@media (min-width: 1024px) {
+    .code-block {
+        --border-radius: .625rem;
+    }
+}
+
+/* Mobile */
+@media (max-width: 640px){
+    .code-block {
+        --code-margin-y: 0 -1rem 0 -1rem;
+    }
+}
+
+
+/* Base */
+.code-block {
+    --button-border-radius: 10px;
+    --button-diameter: 36px;
+    --button-outline-width: 1px;
+}
+
 
 .code-block {
     box-shadow: var(--border-color) 0 0 0 1px;
-    border-radius: .625rem;
+    border-radius: var(--border-radius);
+    margin: var(--code-margin-y);
+
     background: var(--body-bg-color);
 }
 
