--- a/styles/markdown/_callout.css
+++ b/styles/markdown/_callout.css
@@ -22,14 +22,14 @@
         --prompt-text-color: rgb(216, 212, 212, 0.75);
         --prompt-tip-bg: rgb(22, 60, 36, 0.64);
         --prompt-tip-icon-color: rgb(15, 164, 15, 0.81);
-        --prompt-tip-text-color: #45ff45ab;
+        --prompt-tip-text-color: #bbffbbab;
         --prompt-info-bg: rgb(7, 59, 104, 0.8);
         --prompt-info-icon-color: #0075d1;
         --prompt-info-text-color: #d5ecffc9;
-        --prompt-warning-bg: rgb(90, 69, 3, 0.88);
+        --prompt-warning-bg: rgba(233, 151, 63, 0.1);
         --prompt-warning-icon-color: rgb(255, 165, 0, 0.8);
         --prompt-warning-text-color: #ffc65cc9;
-        --prompt-danger-bg: rgb(86, 28, 8, 0.8);
+        --prompt-danger-bg: rgba(251, 70, 76, 0.1);
         --prompt-danger-icon-color: #cd0202;
         --prompt-danger-text-color: #ff5c51c4;
 
